# git-rex

./: .gitignore  README.md  pyproject.toml  script.sh
.github/scripts/: check-version-change.py  check-version-change.sh
.github/workflows/: pr.yml  validation.yml
git_rex/: __init__.py  bash.py  editor.py  git.py  log_config.py  messages.py
test/: conftest.py
test/system/: __init__.py  conftest.py  test_bash_shell.py  test_no_git_dir.py  test_rex_commit.py  test_rex_edit.py  test_rex_edit_commit.py  test_rex_nocommit.py  test_rex_verbose.py  test_run_at_repository_root.py  test_script_sections.py  test_script_stdin.py
test/system/mock_editor/: __init__.py  __main__.py  mock_editor.py
test/unit/: __init__.py  test_bash.py  test_cleanup_message.py  test_extract_script.py  test_extract_scripts.py  test_git.py
