[tool.poetry]
name = "git-rex"
version = "0.1.0"
description = ""
authors = ["Alice Purcell <Alice.Purcell.39@gmail.com>"]

[tool.poetry.scripts]
git-rex = "git_rex:main"

[tool.poetry.dependencies]
python = "^3.8"
docopt-ng = "^0.7.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
isort = "^5.10.1"

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
