[tool.poetry]
name = "git-rex"
version = "0.6.0"
description = ""
authors = ["Alice Purcell <Alice.Purcell.39@gmail.com>"]

[tool.poetry.scripts]
git-rex = "git_rex:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.931"
pytest-timeout = "^2.1.0"

[tool.isort]
profile = "black"

[tool.mypy]
warn_redundant_casts = "True"
warn_unused_configs = "True"
[[tool.mypy.overrides]]
module = "git_rex"
# See https://github.com/python/mypy/issues/11401
check_untyped_defs = "True"
disallow_any_generics = "True"
disallow_incomplete_defs = "True"
disallow_subclassing_any = "True"
disallow_untyped_calls = "True"
disallow_untyped_decorators = "True"
disallow_untyped_defs = "True"
no_implicit_optional = "True"
no_implicit_reexport = "True"
strict_equality = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
[[tool.mypy.overrides]]
module = "docopt"
ignore_missing_imports = "True"  # See https://github.com/jazzband/docopt-ng/issues/18

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
